--- a/examples/site/widgets/swipe_toggle.html
+++ b/examples/site/widgets/swipe_toggle.html
@@ -3,20 +3,5 @@ layout: widgets
 title: Swipe Toggle
 name: swipe_toggle
 widget_selected: selected
+description: <p>Coming Soon</p>
 ---
-<div data-ur-set="tabs">
-  
-  <div data-ur-tabs-component="content" data-ur-tab-id="basicpage" data-ur-state="enabled">
-    <div class="wrapper">
-      <h1> {{page.title}} </h1>
-    </div>
-    <div class="description_wrapper">
-      <h2> Description </h2>
-
-      <div class='description'>
-        <p>Coming Soon</p>
-      </div>
-    </div> <!-- wrapper -->
-
-  </div> <!-- basicpage -->
-</div> <!-- tabs -->
